z-index Correction

--- a/app/assets/stylesheets/public/frontoffice.css.scss
+++ b/app/assets/stylesheets/public/frontoffice.css.scss
@@ -129,7 +129,7 @@ body:before
 #background_grey
 {
 	background-color: #E7E7E7; 
-	z-index: -2;
+	// z-index: -2;
 	position: relative;
 }
 
